# btrfs

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README  README.md  btrfs-dump.pl  btrfs.cat  btrfs.inf  btrfs.sln  btrfs.vcproj  btrfs.vcxproj  btrfs.vcxproj.filters  btrfs.vs2010.sln  btrfs.vs2015.sln  mingw-amd64.cmake  mingw-x86.cmake  mkbtrfs.vcproj  mkbtrfs.vcxproj  msvc-aarch64.cmake  msvc-amd64.cmake  msvc-armv7.cmake  msvc-x86.cmake  send-dump.pl  shellbtrfs.def  shellbtrfs.manifest  shellbtrfs.vcproj  shellbtrfs.vcxproj  ubtrfs.def  ubtrfs.vcproj  ubtrfs.vcxproj
.github/: FUNDING.yml
.github/workflows/: build.yml
Debug/x64/: btrfs.sys
Debug/x86/: btrfs.sys
doc/: Prevent driver loading in booting
src/: balance.c  blake2-impl.h  blake2.h  boot.c  btrfs-vol.inf  btrfs.c  btrfs.cdf  btrfs.h  btrfs.inf  btrfs.rc  btrfs.rc.in  btrfs_drv.h  btrfsioctl.h  cache.c  calcthread.c  compress.c  crc32c-aarch64.asm  crc32c-amd64-gas.S  crc32c-amd64-masm.S  crc32c-amd64-masm.asm  crc32c-gas.S  crc32c-masm.asm  crc32c-x86-gas.S  crc32c-x86-masm.S  crc32c-x86-masm.asm  crc32c.c  crc32c.h  create.c  devctrl.c  dirctrl.c  extent-tree.c  fastio.c  fileinfo.c  flushthread.c  free-space.c  fsctl.c  galois.c  loader.c  pnp.c  read.c  (+16 more)
src/mkbtrfs/: Makefile  mkbtrfs.c  mkbtrfs.rc  mkbtrfs.rc.in  resource.h
src/shellext/: Makefile  balance.cpp  balance.h  contextmenu.cpp  contextmenu.h  devices.cpp  devices.h  factory.cpp  factory.h  iconoverlay.cpp  iconoverlay.h  main.cpp  mappings.cpp  mountmgr.cpp  mountmgr.h  propsheet.cpp  propsheet.h  recv.cpp  recv.h  resource.h  scrub.cpp  scrub.h  send.cpp  send.h  shellbtrfs.def  shellbtrfs.manifest  shellbtrfs.rc  shellbtrfs.rc.in  shellext.h  volpropsheet.cpp  volpropsheet.h
src/tests/: create.cpp  cs.cpp  delete.cpp  ea.cpp  fileinfo.cpp  io.cpp  links.cpp  manifest.xml  mmap.cpp  oplock.cpp  overwrite.cpp  rename.cpp  reparse.cpp  security.cpp  streams.cpp  supersede.cpp  test.cpp  test.h  test.rc.in
src/ubtrfs/: Makefile  resource.h  ubtrfs.c  ubtrfs.def  ubtrfs.rc  ubtrfs.rc.in
src/zlib/: deflate.c  deflate.h  inflate.c  inflate.h  zutil.h
src/zstd/: fse_compress.c  fse_decompress.c  hist.c  huf_compress.c  huf_decompress.c  mem.h  zstd_common.c  zstd_ddict.c  zstd_decompress.c  zstd_internal.h  zstd_lazy.c  zstd_ldm.c
x64/: btrfs.sys
x86/: btrfs.sys
